--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "save": "^2.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
